--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<html lang="en" xmlns="http://www.w3.org/1999/html">
+<head>
+    <meta charset="UTF-8"/>
     <title>HTML, CSS and SASS Boilerplate</title>
     <meta
-      name="description"
-      content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev"
+            name="description"
+            content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-  </head>
-  <body>
-    <div class="main">
-      <div class="emoji mb-6">💣🤯💥</div>
-      <button class="button">Boom?</button>
-    </div>
-  </body>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <script type="text/javascript" src="js/task-52.js"></script>
+    <link rel="stylesheet" type="text/css" href="scss/task-52.css"/>
+</head>
+
+<body>
+<h2>Best morning routine steps</h2>
+<button onclick="myFunction()">Show steps</button>
+<div id="myDiv">
+<article class="message" >
+    <h1>Step 1</h1>
+    <p>Get a good night's sleep.</p>
+</article>
+<article class="message" >
+    <h1>Step 2</h1>
+    <p>Avoid the snooze button.</p>
+</article>
+<article class="message" >
+    <h1>Step 3</h1>
+    <p>Give yourself enough time to get to work.</p>
+</article>
+<article class="message" >
+    <h1>Step 4</h1>
+    <p>Drink a full glass of water.</p>
+</article>
+<article class="message" >
+    <h1>Step 5</h1>
+    <p>Enjoy a cup of coffee or tea.</p>
+</article>
+</div>
+
+</body>
+
 </html>
