--- a/src/index.html
+++ b/src/index.html
@@ -12,31 +12,13 @@
     <link rel="stylesheet" type="text/css" href="scss/task-52.css"/>
 </head>
 
-<body>
-<h2>Best morning routine steps</h2>
-<button onclick="myFunction()">Show steps</button>
-<div id="myDiv">
-<article class="message" >
-    <h1>Step 1</h1>
-    <p>Get a good night's sleep.</p>
-</article>
-<article class="message" >
-    <h1>Step 2</h1>
-    <p>Avoid the snooze button.</p>
-</article>
-<article class="message" >
-    <h1>Step 3</h1>
-    <p>Give yourself enough time to get to work.</p>
-</article>
-<article class="message" >
-    <h1>Step 4</h1>
-    <p>Drink a full glass of water.</p>
-</article>
-<article class="message" >
-    <h1>Step 5</h1>
-    <p>Enjoy a cup of coffee or tea.</p>
-</article>
-</div>
+<body onclick="myFunction()">
+<article class="message">Test 1</article>
+<article class="message">Test 2</article>
+<article class="message">Test 3</article>
+<article class="message">Test 4</article>
+<article class="message">Test 5</article>
+
 
 </body>
 
