--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,7 @@
 </head>
 
 <body onclick="myFunction()">
-<article class="message">Test 1</article>
-
-
-
+<p>click to add 5 article</p>
 </body>
 
 </html>
